# shelly3em-data

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: battery_simulation.py  generate_data.py  get_data.py  utils.py
