[project]
name = "shelly3em-data"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michele Polonioli", email = "michele.polonioli@gmail.com"},
]
dependencies = ["requests>=2.32.3", "python-dotenv>=1.0.1", "pandas>=2.2.3", "tabulate>=0.9.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
get_data = "python src/get_data.py"
generate_data = "python src/generate_data.py"
battery_simulation = "python src/battery_simulation.py"
